# vessel

./: .gitignore  Cargo.toml  README.md
app/: file1.txt  file2.txt  file3.txt
cmd/vessel/: Cargo.toml
cmd/vessel/src/: main.rs
cmd/vesseld/: Cargo.toml
cmd/vesseld/src/: main.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/namespaces/: Cargo.toml
crates/namespaces/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: build.rs  container.rs  image.rs  lib.rs  overlay.rs
