[package]
name = "vesseld"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
api = { path = "../../crates/api" }
runtime = { path = "../../crates/runtime"}
storage = {path = "../../crates/storage"}
nix = { version = "0.27", features = ["mount", "sched", "process", "hostname", "fs"] }